--- a/index.html
+++ b/index.html
@@ -7,15 +7,36 @@
     <meta name="viewport" content="initial-scale=1.0"> </head>
 <meta name="description" content="Maguwo Host">
 <meta name="author" content="Adam Skwarczyński">
+<link rel="stylesheet" href="css/reset.css">
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:600" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css?v=1.0">
 <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
-<script src="https://use.fontawesome.com/4eb23d3f8c.js"></script>
 
 <body>
-    <h1>Hello World!</h1>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <section class="navigation">
+        <div class="container">
+            <header>
+                <div class="header-logo"> <img src="img/MaguwoHost.png" alt="MaguwoHost" /> </div>
+            </header>
+            <nav class="header-menu">
+                <ul>
+                    <li class="menu-active"><a href=#>Home</a></li>
+                    <li><a href=#>About</a></li>
+                    <li><a href=#>Pricing</a></li>
+                    <li><a href=#>Domain</a></li>
+                    <li><a href=#>Hosting</a></li>
+                </ul>
+            </nav>
+            <div class="header-contact"> <span class="contact-help">Do you need help? Just Email, Live chat or Calls us</span> <a class="chat-button">Live chat</a><span class="contact-number">6284-6534</span></div>
+        </div>
+    </section>
+    <section class="splash">
+        <div class="container"></div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
     <script src="js/main.js"></script>
 </body>
 
